--- a/fudo/views/index.hbs
+++ b/fudo/views/index.hbs
@@ -8,7 +8,7 @@
     <script src="/js/ajax.js"></script>
   </head>
   <body>
-    <h1 class="workshop-name">6.148 Day 4 MongoDB Workshop</h1>
+    <h1 class="site-name">fudo</h1>
     <div class="content">
       <h1>{{ title }} Form</h1>
       <form name="adduser" method="post" action="/adduser">
