--- a/fudo/views/index.hbs
+++ b/fudo/views/index.hbs
@@ -10,6 +10,7 @@
   <body>
     <h1 class="site-name">fudo</h1>
     <div class="content">
+      {{> post }}
       <h1>{{ title }} Form</h1>
       <form name="adduser" method="post" action="/adduser">
         <ul>
