--- a/fudo/views/index.hbs
+++ b/fudo/views/index.hbs
@@ -4,14 +4,15 @@
     <title>{{ title }}</title>
     <link rel='stylesheet' href='/stylesheets/base.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/navbar.css' />
+    <link rel='stylesheet' href='/stylesheets/post.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="/js/ajax.js"></script>
   </head>
   <body>
-    <h1 class="site-name">fudo</h1>
+    {{> navbar }}
     <div class="content">
       {{> post }}
-      <h1>{{ title }} Form</h1>
       <form name="adduser" method="post" action="/adduser">
         <ul>
           <li>Username</li>
