--- a/fudo/views/partials/post.hbs
+++ b/fudo/views/partials/post.hbs
@@ -1,4 +1,4 @@
 <div class="post">
-	<h1> {{ postTitle }} </h1>
-	<p> {{ postContent }} </p>
+	<h2> {{ postTitle }} </h2>
+	<h3> {{ postContent }} </h3>
 </div>
