--- a/fudo/views/index.hbs
+++ b/fudo/views/index.hbs
@@ -6,44 +6,14 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/stylesheets/navbar.css' />
     <link rel='stylesheet' href='/stylesheets/post.css' />
+    <link rel='stylesheet' href='/stylesheets/side.css' />
+    <link rel='stylesheet' href='/stylesheets/newsfeed.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="/js/ajax.js"></script>
   </head>
   <body>
     {{> navbar }}
-    <div class="content">
-      {{> post }}
-      <form name="adduser" method="post" action="/adduser">
-        <ul>
-          <li>Username</li>
-
-          <li><input type="text" placeholder="Username" name="username"></li>
-
-          <li>Favorite Fruit</li>
-
-          <li><input type="text" placeholder="Favorite Fruit" name="userfruit"></li>
-
-          <li><button type="submit">Submit</button></li>
-        </ul>
-      </form>
-      <form name="deleteuser" method="post" action="/deleteuser">
-        <ul>
-          <li>User to Delete</li>
-
-          <li><input type="text" placeholder="Username" name="username"></li>
-
-          <li><button type="submit">Submit</button></li>
-        </ul>
-      </form>
-
-      <ul>
-        <li>User to Find</li>
-        <li><input type="text" placeholder="Username" class="find"></li>
-        <li><button type="submit" class="find-submit">Submit</button></li>
-        <li><p class="find-output"></p></li>
-      </ul>
-
-      <a href="/userlist">See userlist</a>
-    </div>
+    {{> side }}
+    {{> newsfeed }}
   </body>
 </html>
