CSS changes. Still need to figure out how to put both side and newsfeed divs in a main div.

--- a/fudo/views/partials/newsfeed.hbs
+++ b/fudo/views/partials/newsfeed.hbs
@@ -1,20 +1,21 @@
 <div class="newsfeed">
-  <form name="addpost" method="post" action="/addpost">
+
+  <form name="addpost" method="post" action="/addpost" class="addpost">
+
     <ul>
       <li>Post Title</li>
-
       <li><input type="text" placeholder="Title" name="postTitle"></li>
-
       <li>Post Author</li>
-
       <li><input type="text" placeholder="Author" name="postAuthor"></li>
-
-      <li><button type="submit">Submit</button></li>      
+      <li><button type="submit">Submit</button></li>
     </ul>
+
   </form>
+
   {{#each posts}} 
     {{> post }}
   {{/each}}
+
   <form name="adduser" method="post" action="/adduser">
     <ul>
       <li>Username</li>
