--- a/fudo/public/stylesheets/base.css
+++ b/fudo/public/stylesheets/base.css
@@ -22,10 +22,6 @@ body {
     font-family: sans-serif;
 }
 
-li {
-    display: inline-block;
-}
-
 img.sonde {
     left: calc(50vw - 325px - 50px);
     bottom: 0;
@@ -41,4 +37,5 @@ a:hover {
     width: 80%;
     margin: auto;
     background-color: skyblue;
+    overflow: auto;
 }*/
