--- a/fudo/public/stylesheets/navbar.css
+++ b/fudo/public/stylesheets/navbar.css
@@ -1,5 +1,6 @@
 div.navbar {
-	/*position: absolute;*/
+	width: 100%;
+	/*position: fixed;*/
     background-color: rgba(255, 255, 255, .75);
 }
 
@@ -15,4 +16,5 @@ div.navbar ul {
 
 div.navbar li {
 	margin: 10px;
+	display: inline-block;
 }
