--- a/fudo/public/stylesheets/newsfeed.css
+++ b/fudo/public/stylesheets/newsfeed.css
@@ -8,3 +8,15 @@ div.newsfeed {
   padding: 25px;
   margin: 5px;
 }
+
+form.addpost {
+	border-radius: 5px;
+	border: 1px solid black;
+	padding: 10px;
+	margin: 5px;
+}
+
+form.addpost li {
+	font-size: .8em;
+	display: block;
+}
