--- a/fudo/views/partials/post.hbs
+++ b/fudo/views/partials/post.hbs
@@ -1,4 +1,6 @@
 <div class="post">
-	<h2> {{ postTitle }} </h2>
-	<h3> {{ postAuthor }} </h3>
+	<p class="title"> {{ postTitle }} </p>
+	<p class="rating"> Rating: 5 </p>
+	<br>
+	<p class="author"> {{ postAuthor }} </p>
 </div>
