--- a/fudo/public/stylesheets/base.css
+++ b/fudo/public/stylesheets/base.css
@@ -18,6 +18,7 @@ body {
     background-image: url("../images/bluepurple.jpg");
     background-size: cover;
     background-position: center 100%;
+    background-attachment: fixed;
     background-repeat: no-repeat;
     font-family: sans-serif;
 }
