Basic login/logout implemented. Have to change navbar to respond to whether a user is logged in or not.

--- a/fudo/views/partials/newsfeed.hbs
+++ b/fudo/views/partials/newsfeed.hbs
@@ -16,7 +16,7 @@
     {{> post }}
   {{/each}}
 
-  <form name="adduser" method="post" action="/adduser">
+<!--   <form name="adduser" method="post" action="/adduser">
     <ul>
       <li>Username</li>
 
@@ -47,4 +47,4 @@
   </ul>
 
   <a href="/userlist">See userlist</a>
-</div>
+</div> -->
