--- a/fudo/views/partials/navbar.hbs
+++ b/fudo/views/partials/navbar.hbs
@@ -2,7 +2,7 @@
 	<h1> {{ title }} </h1>
 	<ul>
 		<li> <input type="text" placeholder="Search" name="searchContent">
-		<li> <a href="/myprofile">My Profile</a>
-		<li> <a href="/">Logout</a>
+		<li> <a href="/login">Login</a>
+		<li> <a href="/logout">Logout</a>
 	</ul>
 </div>
