--- a/fudo/public/stylesheets/navbar.css
+++ b/fudo/public/stylesheets/navbar.css
@@ -6,8 +6,15 @@ div.navbar {
 
 div.navbar h1 {
 	font-size: 1.5em;
+	display: inline-block;
+}
+
+div.navbar h1 a {
+	font-size: 1em;
 	padding: .25em;
 	display: inline-block;
+	color: black;
+	text-decoration: none;
 }
 
 div.navbar ul {
