--- a/fudo/public/stylesheets/home.css
+++ b/fudo/public/stylesheets/home.css
@@ -27,7 +27,11 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  background-color: #515A6B;
+  background-image: url("../images/strawberries.jpg");
+  background-size: cover;
+  background-position: center 100%;
+  background-repeat: no-repeat;
 }
 body {
   color: #fff;
@@ -73,7 +77,7 @@ body {
 
 .masthead-brand {
   margin-bottom: 2rem;
-  font-size: 20pt;
+  font-size: 25pt;
 }
 
 .nav-masthead .nav-link {
@@ -114,9 +118,11 @@ body {
 
 .cover {
   padding: 0 1.5rem;
+  font-size: 25pt;
 }
 .cover .btn-lg {
   padding: .75rem 1.25rem;
+  font-size: 15pt;
   font-weight: bold;
 }
 
@@ -134,7 +140,7 @@ body {
  * Affix and center
  */
 
-@media (min-width: 70em) {
+@media (min-width: 10em) {
   /* Pull out the header and footer */
   .masthead {
     position: fixed;
@@ -160,6 +166,6 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 80rem;
+    width: 42rem;
   }
 }
