--- a/fudo/views/home.hbs
+++ b/fudo/views/home.hbs
@@ -28,6 +28,7 @@
             <nav class="nav nav-masthead">
               <a class="nav-link active" href="#">Home</a>
               <a class="nav-link" href="#">Discover</a>
+              <a class="nav-link" href="#">Share</a>
               <a class="nav-link" href="#">Profile</a>
             </nav>
           </div>
@@ -38,7 +39,7 @@
           <div class="inner cover">
             <h1 class="cover-heading">Discover and share the beauty of food</h1>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-secondary">Log In</a>
+              <a href="#" class="btn btn-lg btn-secondary">Start Sharing</a>
             </p>
           </div>
 
@@ -58,10 +59,10 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="../../bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../../bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../../bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
