--- a/fudo/views/myprofile.hbs
+++ b/fudo/views/myprofile.hbs
@@ -14,6 +14,8 @@
   <body>
     {{> navbar }}
     {{> side}}
-    {{> newsfeed}}   
+    <div class="newsfeed">
+      <p> Profile Page!! </p>
+    </div> 
   </body>
 </html>
