--- a/fudo/public/stylesheets/base.css
+++ b/fudo/public/stylesheets/base.css
@@ -15,32 +15,12 @@ html {
 
 body {
     background-color: #515A6B;
-    background-image: url("../images/background.png");
+    background-image: url("../images/bluepurple.jpg");
     background-size: cover;
     background-position: center 100%;
+    background-attachment: fixed;
     background-repeat: no-repeat;
     font-family: sans-serif;
-}
-
-h1.workshop-name {
-    color: white;
-    font-family: 'helvetica neue', arial, sans-serif;
-    font-weight: normal;
-    margin-top: 6vh;
-    margin-left: calc(50vw - 325px);
-    font-size: 2.25em;
-}
-
-div.content {
-    height: 78vh;
-    width: 650px;
-    position: fixed;
-    top: 16vh;
-    left: calc(50vw - 325px);
-    background-color: rgba(255, 255, 255, .75);
-    overflow: auto;
-    border-radius: 10px;
-    padding: 25px;
 }
 
 img.sonde {
@@ -53,3 +33,10 @@ img.sonde {
 a:hover {
     cursor: pointer;
 }
+
+/*div.main {
+    width: 80%;
+    margin: auto;
+    background-color: skyblue;
+    overflow: auto;
+}*/
