--- a/fudo/views/partials/navbar.hbs
+++ b/fudo/views/partials/navbar.hbs
@@ -4,11 +4,11 @@
 		<li> <input type="text" placeholder="Search" name="searchContent">
 		
 		{{#unless isLoggedIn}}
-		<li> <a href="/login">Login</a>
+		<li> <a href="/login">Login</a></li>
 		{{/unless}}
 		{{#if isLoggedIn}}
-		<li> <a href="/myprofile">My Profile</a>
-		<li> <a href="/logout">Logout</a>
+		<li> <a href="/myprofile">My Profile</a></li>
+		<li> <a href="/logout">Logout</a></li>
 		{{/if}} 
 
 		<!-- <li> <a href="/login">Login</a>
