--- a/fudo/public/stylesheets/home.css
+++ b/fudo/public/stylesheets/home.css
@@ -81,8 +81,9 @@ body {
 }
 
 .nav-masthead .nav-link {
-  padding: .25rem 0;
+  padding: .25rem;
   font-weight: bold;
+  font-size: 15pt;
   color: rgba(255,255,255,.5);
   background-color: transparent;
   border-bottom: .1rem solid transparent;
