--- a/fudo/public/stylesheets/login.css
+++ b/fudo/public/stylesheets/login.css
@@ -26,15 +26,10 @@
           <div class="inner">
             <h3 class="masthead-brand">fudo</h3>
             <nav class="nav nav-masthead">
-              <!--<a class="nav-link active" href="#">Home</a>-->
-              <a class="nav-link" href="/newsfeed">Discover</a>
-              {{#unless isLoggedIn}}
-              <a class="nav-link" href="/login">Login</a>
-              {{/unless}}
-              {{#if isLoggedIn}}
-              <a class="nav-link" href="/myprofile">My Profile</a>
-              <a class="nav-link" href="/logout">Logout</a>
-              {{/if}} 
+              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link" href="#">Discover</a>
+              <a class="nav-link" href="#">Share</a>
+              <a class="nav-link" href="#">Profile</a>
             </nav>
           </div>
         </div>
