MyProfile page now displays username!

--- a/fudo/views/myprofile.hbs
+++ b/fudo/views/myprofile.hbs
@@ -15,7 +15,7 @@
     {{> navbar }}
     {{> side}}
     <div class="newsfeed">
-      <p> Profile Page!! </p>
+      <p> Welcome, {{ username }} </p>
     </div> 
   </body>
 </html>
