--- a/fudo/views/partials/navbar.hbs
+++ b/fudo/views/partials/navbar.hbs
@@ -1,14 +1,15 @@
 <div class="navbar">
 	<h1><a href="/"> {{ title }} </a></h1>
 	<ul>
-		<li> <input type="text" placeholder="Search" name="searchContent">
-		
+		<li> <input type="text" placeholder="Search" name="searchContent"> </li>
+		<li> <a href="/newsfeed">Discover</a> </li>
+
 		{{#unless isLoggedIn}}
-		<li> <a href="/login">Login</a></li>
+		<li> <a href="/login">Login</a> </li>
 		{{/unless}}
 		{{#if isLoggedIn}}
-		<li> <a href="/myprofile">My Profile</a></li>
-		<li> <a href="/logout">Logout</a></li>
+		<li> <a href="/myprofile">My Profile</a> </li>
+		<li> <a href="/logout">Logout</a> </li>
 		{{/if}} 
 
 		<!-- <li> <a href="/login">Login</a>
