--- a/fudo/public/stylesheets/login.css
+++ b/fudo/public/stylesheets/login.css
@@ -1,68 +1,158 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
-    <title>fudo</title>
+.btn { 
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+  padding: 4px 10px 4px; 
+  margin-bottom: 0; 
+  font-family: normal;
+  font-size: 13px; 
+  line-height: 18px; 
+  color: #333333; 
+  text-align: 
+  center;text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); 
+  vertical-align: middle; 
+  background-color: #f5f5f5; 
+  background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6); 
+  background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6); 
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+  background-image: -o-linear-gradient(top, #ffffff, #e6e6e6); 
+  background-image: linear-gradient(top, #ffffff, #e6e6e6); 
+  background-repeat: repeat-x; 
+  filter: progid:dximagetransform.microsoft.gradient(startColorstr=#ffffff, endColorstr=#e6e6e6, GradientType=0); 
+  border-color: #e6e6e6 #e6e6e6 #e6e6e6; 
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); 
+  border: 1px solid #e6e6e6; 
+  -webkit-border-radius: 4px; 
+  -moz-border-radius: 4px; 
+  border-radius: 4px; 
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); 
+  cursor: pointer; 
+  *margin-left: .3em; 
+}
+.btn:hover, .btn:active, .btn.active, .btn.disabled, .btn[disabled] { 
+  background-color: #e6e6e6; 
+}
+.btn-large { 
+  padding: 9px 14px; 
+  font-size: 15px;
+  font-family: normal;
+  font: normal; 
+  line-height: normal; 
+  -webkit-border-radius: 5px; 
+  -moz-border-radius: 5px; 
+  border-radius: 5px; 
+}
+.btn:hover { color: #333333; 
+  text-decoration: none; 
+  background-color: #e6e6e6; 
+  background-position: 0 -15px; 
+  -webkit-transition: background-position 0.1s linear; 
+  -moz-transition: background-position 0.1s linear; 
+  -ms-transition: background-position 0.1s linear; 
+  -o-transition: background-position 0.1s linear; 
+  transition: background-position 0.1s linear; 
+}
 
-    <!-- Bootstrap core CSS -->
-    <link href="../../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+.btn-primary, .btn-primary:hover { 
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); 
+  color: #ffffff
+}
+.btn-primary.active { 
+  color: rgba(255, 255, 255, 0.75); 
+}
 
-    <!-- Custom styles for this template -->
-    <link href="../../stylesheets/home.css" rel="stylesheet">
-  </head>
+/*
+Here are the real colors for the buttons
+*/
+.btn-primary { 
+  font: normal;
+  font-family: normal;
+  background-color: #4a77d4; 
+  background-image: -moz-linear-gradient(top, #6eb6de, #4a77d4); 
+  background-image: -ms-linear-gradient(top, #6eb6de, #4a77d4); 
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6eb6de), to(#4a77d4));
+  background-image: -webkit-linear-gradient(top, #6eb6de, #4a77d4); 
+  background-image: -o-linear-gradient(top, #6eb6de, #4a77d4); 
+  background-image: linear-gradient(top, #6eb6de, #4a77d4); 
+  background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#6eb6de, endColorstr=#4a77d4, GradientType=0);  
+  border: 1px solid #3762bc; 
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.4); 
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5); 
+}
 
-  <body>
+.btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { 
+  filter: none; 
+  background-color: #4a77d4; 
+}
+.btn-block { 
+  width: 100%; 
+  display:block; 
+}
 
-    <div class="site-wrapper">
+* { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; }
 
-      <div class="site-wrapper-inner">
+html{ 
+  width: 100%; 
+  height:100%; 
+  overflow:hidden; }
 
-        <div class="masthead clearfix">
-          <div class="inner">
-            <h3 class="masthead-brand">fudo</h3>
-            <nav class="nav nav-masthead">
-              <a class="nav-link active" href="#">Home</a>
-              <a class="nav-link" href="#">Discover</a>
-              <a class="nav-link" href="#">Share</a>
-              <a class="nav-link" href="#">Profile</a>
-            </nav>
-          </div>
-        </div>
 
-        <div class="cover-container">
+body { 
+  width: 100%;
+  height:100%;
+  font: normal;
+  font-family: normal;
+  background-image: url("../images/flyingburger.jpg");
+  background-size: cover;
+  background-position: center 100%;
+  background-repeat: no-repeat;
+}
 
-          <div class="inner cover">
-            <h1 class="cover-heading">Discover and share the beauty of food</h1>
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-secondary">Start Sharing</a>
-            </p>
-          </div>
+.login { 
+  position: absolute;
+  font: normal;
+  font-family: normal;
+  top: 50%;
+  left: 50%;
+  margin: -150px 0 0 -150px;
+  width:300px;
+  height:300px;
+}
+.login h1 { 
+  color: #fff; 
+  text-shadow: 0 0 10px rgba(0,0,0,0.3); 
+  letter-spacing:1px; 
+  text-align:center; 
+  font: normal;
+  font-family: normal;
+  font-size: 30pt;
+}
 
-          <div class="mastfoot">
-            <div class="inner">
-              <p>A 6.148 Web App - Developed by Rachel Zhang, Sunny Tian, Deepankar Gupta</p>
-            </div>
-          </div>
 
-        </div>
+input { 
+  width: 100%; 
+  margin-bottom: 10px; 
+  background: rgba(0,0,0,0.3);
+  border: none;
+  outline: none;
+  padding: 10px;
+  font-size: 13px;
+  font: normal;
+  color: #fff;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+  border: 1px solid rgba(0,0,0,0.3);
+  border-radius: 4px;
+  box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
+  -webkit-transition: box-shadow .5s ease;
+  -moz-transition: box-shadow .5s ease;
+  -o-transition: box-shadow .5s ease;
+  -ms-transition: box-shadow .5s ease;
+  transition: box-shadow .5s ease;
+}
 
-      </div>
-
-    </div>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="../../bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="../../bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
+input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
