--- a/fudo/views/home.hbs
+++ b/fudo/views/home.hbs
@@ -44,7 +44,7 @@
           <div class="inner cover">
             <h1 class="cover-heading">Discover and share the beauty of food</h1>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-secondary">Start Sharing</a>
+              <a href="#" class="btn btn-lg btn-secondary">Dive In</a>
             </p>
           </div>
 
