--- a/fudo/views/login.hbs
+++ b/fudo/views/login.hbs
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>{{ title }}</title>
-    <link rel='stylesheet' href='/stylesheets/base.css' />
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/navbar.css' />
-    <link rel='stylesheet' href='/stylesheets/post.css' />
-    <link rel='stylesheet' href='/stylesheets/side.css' />
-    <link rel='stylesheet' href='/stylesheets/newsfeed.css' />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="/js/ajax.js"></script>
-  </head>
-  <body>
-    {{> navbar }}
-    {{> side}} 
-    <div class='newsfeed'>
-    <form name="login" method="post" action="/login">
-      <h1>You must first log in to access that page!</h1>
-      <ul>
-        <li>Username</li>
-        <li><input type="text" placeholder="Username" name="username"></li>
-        <li>Password</li>
-        <li><input type="text" placeholder="Password" name="password"></li>
-        <li><button type="submit">Submit</button></li>    
-        <li><a href="/signup">Create an Account</a></li>  
-      </ul>    
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>Login Form</title>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link href="../../stylesheets/login.css" rel="stylesheet">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+
+</head>
+
+<body>
+  <div class="login">
+  <h1>Login</h1>
+    <form method="post">
+      <input type="text" name="u" placeholder="Username" required="required" />
+        <input type="password" name="p" placeholder="Password" required="required" />
+        <button type="submit" class="btn btn-primary btn-block btn-large">Log in</button>
+        <button type="signup" class="btn btn-primary btn-block btn-large">Not a member?</button>
     </form>
-    </div>
-  </body>
+</div>
+  
+    <script src="js/index.js"></script>
+
+</body>
 </html>
