--- a/fudo/public/stylesheets/login.css
+++ b/fudo/public/stylesheets/login.css
@@ -130,9 +130,59 @@ body {
   text-align:center; 
   font: normal;
   font-family: normal;
-  font-size: 30pt;
+  font-size: 50pt;
 }
 
+/*
+ * Header
+ */
+
+.masthead {
+  margin-bottom: 2rem;
+}
+
+.masthead-brand {
+  margin-bottom: 2rem;
+  font-size: 25pt;
+}
+
+.nav-masthead .nav-link {
+  padding: .25rem;
+  font-weight: bold;
+  font-size: 15pt;
+  color: #fff;
+  background-color: transparent;
+  border-bottom: .1rem solid transparent;
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255,255,255,.25);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+}
+
+@media (min-width: 48em) {
+  .masthead-brand {
+    float: left;
+  }
+  .nav-masthead {
+    float: right;
+  }
+}
+
+/* Padding for spacing */
+.inner {
+  padding: 2rem;
+  color: white;
+}
 
 input { 
   width: 100%; 
@@ -154,5 +204,3 @@ input {
   -ms-transition: box-shadow .5s ease;
   transition: box-shadow .5s ease;
 }
-
-input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
