--- a/fudo/views/newsfeed.hbs
+++ b/fudo/views/newsfeed.hbs
@@ -13,7 +13,7 @@
   </head>
   <body>
     {{> navbar }}
-    {{> side}}
-    {{> newsfeed}}   
+    {{> side }}
+    {{> newsfeedview }}   
   </body>
 </html>
