--- a/fudo/views/login.hbs
+++ b/fudo/views/login.hbs
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="login">
-  <h1>Login</h1>
+  <h1>Log In</h1>
     <form method="post">
       <input type="text" name="u" placeholder="Username" required="required" />
         <input type="password" name="p" placeholder="Password" required="required" />
