--- a/fudo/views/register.hbs
+++ b/fudo/views/register.hbs
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>{{ title }}</title>
-    <link rel='stylesheet' href='/stylesheets/base.css' />
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/navbar.css' />
-    <link rel='stylesheet' href='/stylesheets/post.css' />
-    <link rel='stylesheet' href='/stylesheets/side.css' />
-    <link rel='stylesheet' href='/stylesheets/newsfeed.css' />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="/js/ajax.js"></script>
-  </head>
-  <body>
-    {{> navbar }}
-    {{> side}} 
-    <div class='newsfeed'>
-    <form name="signup" method="post" action="/signup">
-      <ul>
-        <li>Username</li>
-        <li><input type="text" placeholder="Username" name="username"></li>
-        <li>Password</li>
-        <li><input type="text" placeholder="Password" name="password"></li>
-        <li><button type="submit">Submit</button></li>      
-      </ul>    
-    </form>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>Login Form</title>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link href="../../stylesheets/register.css" rel="stylesheet">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+
+</head>
+
+<body>
+  <div class="masthead clearfix">
+    <div class="inner">
+      <h3 class="masthead-brand">fudo</h3>
+      <nav class="nav nav-masthead">
+      <!--<a class="nav-link active" href="#">Home</a>-->
+      <a class="nav-link" href="/newsfeed">Discover</a>
+      {{#unless isLoggedIn}}
+      <a class="nav-link" href="/login">Login</a>
+      {{/unless}}
+      {{#if isLoggedIn}}
+      <a class="nav-link" href="/myprofile">My Profile</a>
+      <a class="nav-link" href="/logout">Logout</a>
+      {{/if}} 
+      </nav>
     </div>
-  </body>
+  </div>
+  <div class="login">
+  <h1>Sign Up</h1>
+    <form method="post">
+      <input type="text" name="u" placeholder="Username" required="required" />
+        <input type="password" name="p" placeholder="Password" required="required" />
+        <button type="submit" class="btn btn-primary btn-block btn-large">Register</button>
+    </form>
+</div>
+  
+    <script src="js/index.js"></script>
+
+</body>
 </html>
