--- a/fudo/views/login.hbs
+++ b/fudo/views/login.hbs
@@ -30,9 +30,9 @@
   </div>
   <div class="login">
   <h1>Log In</h1>
-    <form method="post">
-      <input type="text" name="u" placeholder="Username" required="required" />
-        <input type="password" name="p" placeholder="Password" required="required" />
+    <form name="login" method="post" action="/login">
+      <input type="text" name="username" placeholder="Username" required="required" />
+        <input type="password" name="password" placeholder="Password" required="required" />
         <button type="submit" class="btn btn-primary btn-block btn-large">Log in</button>
         <a class="registerlink" href="/signup">Register Here</a>
     </form>
