--- a/fudo/views/register.hbs
+++ b/fudo/views/register.hbs
@@ -30,9 +30,9 @@
   </div>
   <div class="login">
   <h1>Sign Up</h1>
-    <form method="post">
-      <input type="text" name="u" placeholder="Username" required="required" />
-        <input type="password" name="p" placeholder="Password" required="required" />
+    <form name="signup" method="post" action="/signup">
+      <input type="text" name="username" placeholder="Username" required="required" />
+        <input type="password" name="password" placeholder="Password" required="required" />
         <button type="submit" class="btn btn-primary btn-block btn-large">Register</button>
     </form>
 </div>
