--- a/fudo/views/home.hbs
+++ b/fudo/views/home.hbs
@@ -14,6 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="../../stylesheets/home.css" rel="stylesheet">
+    <link rel='stylesheet' href='/stylesheets/homestyle.css' />
   </head>
 
   <body>
@@ -22,22 +23,7 @@
 
       <div class="site-wrapper-inner">
 
-        <div class="masthead clearfix">
-          <div class="inner">
-            <h3 class="masthead-brand">fudo</h3>
-            <nav class="nav nav-masthead">
-              <!--<a class="nav-link active" href="#">Home</a>-->
-              <a class="nav-link" href="/newsfeed">Discover</a>
-              {{#unless isLoggedIn}}
-              <a class="nav-link" href="/login">Login</a>
-              {{/unless}}
-              {{#if isLoggedIn}}
-              <a class="nav-link" href="/myprofile">My Profile</a>
-              <a class="nav-link" href="/logout">Logout</a>
-              {{/if}} 
-            </nav>
-          </div>
-        </div>
+        {{> navbar-new}}
 
         <div class="cover-container">
 
