--- a/fudo/views/register.hbs
+++ b/fudo/views/register.hbs
@@ -12,22 +12,7 @@
 </head>
 
 <body>
-  <div class="masthead clearfix">
-    <div class="inner">
-      <h3 class="masthead-brand">fudo</h3>
-      <nav class="nav nav-masthead">
-      <!--<a class="nav-link active" href="#">Home</a>-->
-      <a class="nav-link" href="/newsfeed">Discover</a>
-      {{#unless isLoggedIn}}
-      <a class="nav-link" href="/login">Login</a>
-      {{/unless}}
-      {{#if isLoggedIn}}
-      <a class="nav-link" href="/myprofile">My Profile</a>
-      <a class="nav-link" href="/logout">Logout</a>
-      {{/if}} 
-      </nav>
-    </div>
-  </div>
+  {{> navbar-new }}
   <div class="login">
   <h1>Sign Up</h1>
     <form name="signup" method="post" action="/signup">
