Refixed the url linking (so home directs to newsfeed if user logged in.) Also user now contains a name field.

--- a/fudo/views/myprofile.hbs
+++ b/fudo/views/myprofile.hbs
@@ -15,7 +15,7 @@
     {{> navbar }}
     {{> side}}
     <div class="newsfeed">
-      <p> Welcome, {{ username }} </p>
+      <p> Welcome, {{ name }} </p>
     </div> 
   </body>
 </html>
