--- a/fudo/views/register.hbs
+++ b/fudo/views/register.hbs
@@ -16,9 +16,10 @@
   <div class="login">
   <h1>Sign Up</h1>
     <form name="signup" method="post" action="/signup">
+      <input type="text" name="name" placeholder="Name" required="required" />
       <input type="text" name="username" placeholder="Username" required="required" />
-        <input type="password" name="password" placeholder="Password" required="required" />
-        <button type="submit" class="btn btn-primary btn-block btn-large">Register</button>
+      <input type="password" name="password" placeholder="Password" required="required" />
+      <button type="submit" class="btn btn-primary btn-block btn-large">Register</button>
     </form>
 </div>
   
