--- a/fudo/views/partials/post.hbs
+++ b/fudo/views/partials/post.hbs
@@ -1,4 +1,5 @@
 <div class="post">
+	<img src="{{{imageURL}}}" width="300px">
 	<p class="title"> {{ postTitle }} </p>
 	<p class="rating"> Rating: 5 </p>
 	<br>
