Edit Profile now works.

--- a/fudo/views/myprofile.hbs
+++ b/fudo/views/myprofile.hbs
@@ -15,7 +15,8 @@
     {{> navbar }}
     {{> side}}
     <div class="newsfeed">
-      <p> Welcome, {{ name }} </p>
+      <p> Welcome, {{ name }}. </p>
+      <p> {{ about }} </p>
     </div> 
   </body>
 </html>
