--- a/fudo/views/editprofile.hbs
+++ b/fudo/views/editprofile.hbs
@@ -15,11 +15,14 @@
     {{> navbar }}
     {{> side }}
     <div class="newsfeed">
+      <form name="editprofile" method="post" action="/editprofile" class="editprofile">
       <ul>
-        <li> Name: <input type="text" placeholder=name name="name"> </li> 
-        <li> Username: <input type="text" placeholder={{{username}}} name="username"> </li> 
-        <li> About Me: <input type="text" placeholder=about name="about"> </li>
+        <li> Name: <input type="text" value="{{{name}}}" name="name"> </li> 
+        <li> Username: <input type="text" value="{{{username}}}" name="username"> </li> 
+        <li> About Me: <input type="text" value="{{{about}}}" name="about"> </li>
+        <li> <button type="submit">Submit</button> </li>
       </ul>
+      </form>
     </div>
   </body>
 </html>
