--- a/fudo/views/partials/navbar.hbs
+++ b/fudo/views/partials/navbar.hbs
@@ -9,6 +9,7 @@
 		{{/unless}}
 		{{#if isLoggedIn}}
 		<li> <a href="/myprofile">My Profile</a> </li>
+		<li> <a href="/editprofile">Edit Profile</a> </li>
 		<li> <a href="/logout">Logout</a> </li>
 		{{/if}} 
 
