--- a/fudo/public/stylesheets/home.css
+++ b/fudo/public/stylesheets/home.css
@@ -28,7 +28,7 @@ html,
 body {
   height: 100%;
   background-color: #515A6B;
-  background-image: url("../images/strawberries.jpg");
+  background-image: url("../images/eggs.jpg");
   background-size: cover;
   background-position: center 100%;
   background-repeat: no-repeat;
@@ -119,7 +119,7 @@ body {
 
 .cover {
   padding: 0 1.5rem;
-  font-size: 25pt;
+  font-size: 23pt;
 }
 .cover .btn-lg {
   padding: .75rem 1.25rem;
