Put personal info in myprofile, updated user to contain a phone number and email.

--- a/fudo/views/editprofile.hbs
+++ b/fudo/views/editprofile.hbs
@@ -20,6 +20,8 @@
         <li> Name: <input type="text" value="{{{name}}}" name="name"> </li> 
         <li> Username: <input type="text" value="{{{username}}}" name="username"> </li> 
         <li> About Me: <input type="text" value="{{{about}}}" name="about"> </li>
+        <li> Phone Number: <input type="text" value="{{{phone}}}" name="phone"> </li>
+        <li> Email: <input type="text" value="{{{email}}}" name="email"> </li>
         <li> <button type="submit">Submit</button> </li>
       </ul>
       </form>
