--- a/fudo/views/register.hbs
+++ b/fudo/views/register.hbs
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Login Form</title>
+  <title>Register</title>
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link href="../../stylesheets/register.css" rel="stylesheet">
@@ -17,6 +17,8 @@
   <h1>Sign Up</h1>
     <form name="signup" method="post" action="/signup">
       <input type="text" name="name" placeholder="Name" required="required" />
+      <input type="text" name="phone" placeholder="Phone Number" required="required" />
+      <input type="text" name="email" placeholder="Email" required="required" />
       <input type="text" name="username" placeholder="Username" required="required" />
       <input type="password" name="password" placeholder="Password" required="required" />
       <button type="submit" class="btn btn-primary btn-block btn-large">Register</button>
