--- a/fudo/views/register.hbs
+++ b/fudo/views/register.hbs
@@ -8,6 +8,8 @@
   <link href="../../stylesheets/register.css" rel="stylesheet">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="/js/ajax.js"></script>
 
 </head>
 
