--- a/fudo/views/myprofile.hbs
+++ b/fudo/views/myprofile.hbs
@@ -22,11 +22,10 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Top menu on small screens -->
 <header class="w3-container w3-top w3-white w3-xlarge w3-padding-16">
-<<<<<<< HEAD
+
   <span class="w3-left w3-padding">Deep's Dank Food</span>
-=======
+
   <span class="w3-left w3-padding">{{ name }}</span>
->>>>>>> 35ffcaa20b4d36be5274f5ea7c08be20ee83d681
   <a href="javascript:void(0)" class="w3-right w3-btn w3-white" onclick="w3_open()">☰</a>
 </header>
 
@@ -39,27 +38,27 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- Photo grid -->
   <div class="w3-row w3-grayscale-min">
     <div class="w3-quarter">
-      <img src="../images/popsicle.jpg" style="width:100%" onclick="onClick(this)" alt="Canoeing again">
-      <img src="../images/salmon.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
-      <img src="../images/steak.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+      <img src="../images/popsicle.jpg" style="width:100%" onclick="onClick(this)" alt="Dank popsicle">
+      <img src="../images/salmon.jpg" style="width:100%" onclick="onClick(this)" alt="Dank cherries">
+      <img src="../images/steak.jpg" style="width:100%" onclick="onClick(this)" alt="Dank steak">
    </div>
     
    <div class="w3-quarter">
-      <img src="../images/cherries.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-      <img src="../images/croissant.jpg" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-      <img src="../images/salmon.jpg" style="width:100%" onclick="onClick(this)" alt="Nature again.. At its finest!">
+      <img src="../images/cherries.jpg" style="width:100%" onclick="onClick(this)" alt="Dank Cherries">
+      <img src="../images/croissant.jpg" style="width:100%" onclick="onClick(this)" alt="Dank croissant">
+      <img src="../images/salmon.jpg" style="width:100%" onclick="onClick(this)" alt="Dank salmon">
     </div>
     
     <div class="w3-quarter">
-      <img src="../images/sandwich.jpg" style="width:100%" onclick="onClick(this)" alt="Waiting for the bus in the desert">
-      <img src="../images/wine.jpg" style="width:100%" onclick="onClick(this)" alt="What a beautiful scenery this sunset">
-      <img src="../images/sandwich.jpg" style="width:100%" onclick="onClick(this)" alt="The Beach. Me. Alone. Beautiful">
+      <img src="../images/sandwich.jpg" style="width:100%" onclick="onClick(this)" alt="Dank sandwich">
+      <img src="../images/wine.jpg" style="width:100%" onclick="onClick(this)" alt="Dank wine">
+      <img src="../images/sandwich.jpg" style="width:100%" onclick="onClick(this)" alt="Dank sandwich">
     </div>
 
     <div class="w3-quarter">
-      <img src="../images/steak.jpg" style="width:100%" onclick="onClick(this)" alt="A boy surrounded by beautiful nature">
-      <img src="../images/popsicle.jpg" style="width:100%" onclick="onClick(this)" alt="A girl, and a train passing">
-      <img src="../images/croissant.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet day at the beach. Cold, but beautiful">
+      <img src="../images/steak.jpg" style="width:100%" onclick="onClick(this)" alt="Dank steak">
+      <img src="../images/popsicle.jpg" style="width:100%" onclick="onClick(this)" alt="Dank popsicle">
+      <img src="../images/croissant.jpg" style="width:100%" onclick="onClick(this)" alt="Dank croissant">
     </div>
   </div>
 
