Made error page, put edit profile in myprofile. At least I think this is what I did (idr?)

--- a/fudo/views/myprofile.hbs
+++ b/fudo/views/myprofile.hbs
@@ -40,6 +40,7 @@ body,h1,h2,h3,h4,h5 {font-family: Normal}
             <p>{{ about }}</p> 
             <p>Mail: {{ email }}</p>
             <p>Tel: {{ phone }}</p>
+            <p> <a href='/editprofile'> Edit Profile </a> </p>
             <ul id="service-icons">
               <li class="services-design">Design</li>
                 <li class="services-mobile">Mobile</li>
