--- a/fudo/views/register.hbs
+++ b/fudo/views/register.hbs
@@ -16,7 +16,7 @@
 
 <body>
   {{> navbar-new }}
-  <div class="login">
+  <div class="register">
 
   <!-- multistep form -->
   <!-- <form id="msform"> -->
