Now all fudo titles in top left corner redirect to home page.

--- a/fudo/public/stylesheets/error.css
+++ b/fudo/public/stylesheets/error.css
@@ -162,6 +162,11 @@ body {
   font-size: 25pt;
 }
 
+.masthead-brand a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
 .nav-masthead .nav-link {
   padding: .25rem;
   font-weight: bold;
