--- a/fudo/views/myprofile.hbs
+++ b/fudo/views/myprofile.hbs
@@ -19,7 +19,7 @@ body,h1,h2,h3,h4,h5 {font-family: Normal}
 <div class="w3-main w3-content" style="max-width:1600px;margin-top:-10px";>
   <div class="inner">
     <div class="masthead clearfix">
-      <h3 class="masthead-brand">fudo</h3>
+      <h3 class="masthead-brand"> <a href="/"> {{ title }} </a> </h3>
       <nav class="nav nav-masthead">
         <!--<a class="nav-link active" href="#">Home</a>-->
         <a class="nav-link" href="/newsfeed">Discover</a>
