--- a/fudo/views/partials/navbar-new.hbs
+++ b/fudo/views/partials/navbar-new.hbs
@@ -1,6 +1,6 @@
 <div class="masthead clearfix">
     <div class="inner">
-      <h3 class="masthead-brand">fudo</h3>
+      <h3 class="masthead-brand"> <a href="/"> {{ title }} </a> </h3>
       <nav class="nav nav-masthead">
       <!--<a class="nav-link active" href="#">Home</a>-->
       <a class="nav-link" href="/newsfeed">Discover</a>
