Registration now works. Need to implement safeguard against a user picking a username already being used, or a nonnumeric phone number, or nonvalid email, etc. Also need to show that required fields need to be filled in before pressing Next.

--- a/fudo/public/stylesheets/register.css
+++ b/fudo/public/stylesheets/register.css
@@ -140,6 +140,11 @@ body {
   font-size: 25pt;
 }
 
+.masthead-brand a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
 .nav-masthead .nav-link {
   padding: .25rem;
   font-weight: bold;
@@ -337,5 +342,7 @@ body {
   color: white;
 }
 
-
+.about {
+  height: 100px;
+}
 
