--- a/fudo/views/editprofile.hbs
+++ b/fudo/views/editprofile.hbs
@@ -18,7 +18,7 @@
       <!-- <form name="editprofile" method="post" action="/editprofile" class="editprofile"> -->
       <ul>
         <li> Name: <input type="text" value="{{{name}}}" name="name" class="name"> </li> 
-        <li> Username: <input type="text" value="{{{username}}}" name="username" class="username"> </li> 
+        <!-- <li> Username: <input type="text" value="{{{username}}}" name="username" class="username"> </li>  -->
         <li> About Me: <input type="text" value="{{{about}}}" name="about" class="about"> </li>
         <li> Phone Number: <input type="text" value="{{{phone}}}" name="phone" class="phone"> </li>
         <li> Email: <input type="text" value="{{{email}}}" name="email" class="email"> </li>
