--- a/fudo/views/register.hbs
+++ b/fudo/views/register.hbs
@@ -15,32 +15,32 @@
     <h1>Sign Up</h1>
   
     <!-- multistep form -->
-    <form id="msform">
+    <form id="msform" name="signup" method="post" action="/signup">
       <!-- progressbar -->
       <ul id="progressbar">
         <li class="active">Account Setup</li>
-        <li>Social Profiles</li>
-        <li>Personal Details</li>
+        <li>About Me</li>
+        <!-- <li>Personal Details</li> -->
       </ul>
     <!-- fieldsets -->
     <fieldset>
       <h2 class="fs-title">Create your account</h2>
-      <h3 class="fs-subtitle">This is step 1</h3>
+      <h3 class="fs-subtitle"></h3>
+      <input type="text" name="name" placeholder="Name" required="required" />
+      <input type="text" name="username" placeholder="Username" required="required" />
+      <input type="password" name="password" placeholder="Password" required="required" />
       <input type="text" name="email" placeholder="Email" />
-      <input type="password" name="pass" placeholder="Password" />
-      <input type="password" name="cpass" placeholder="Confirm Password" />
+      <input type="text" name="phone" placeholder="Phone Number" />
       <input type="button" name="next" class="next action-button" value="Next" />
     </fieldset>
     <fieldset>
-      <h2 class="fs-title">Social Profiles</h2>
-      <h3 class="fs-subtitle">Your presence on the social network</h3>
-      <input type="text" name="twitter" placeholder="Twitter" />
-      <input type="text" name="facebook" placeholder="Facebook" />
-      <input type="text" name="gplus" placeholder="Google Plus" />
+      <h2 class="fs-title">Tell us a bit more about yourself!</h2>
+      <h3 class="fs-subtitle">This is optional. You can always edit your description later.</h3>
+      <textarea name="about" cols="40" rows="5"></textarea>
       <input type="button" name="previous" class="previous action-button" value="Previous" />
-      <input type="button" name="next" class="next action-button" value="Next" />
+      <button type="submit" class="submit action-button">Submit</button>
     </fieldset>
-    <fieldset>
+<!--     <fieldset>
       <h2 class="fs-title">Personal Details</h2>
       <h3 class="fs-subtitle">We will never sell it</h3>
       <input type="text" name="fname" placeholder="First Name" />
@@ -50,7 +50,7 @@
       <input type="button" name="previous" class="previous action-button" value="Previous" />
       <input type="submit" name="submit" class="submit action-button" value="Submit" />
     </fieldset>
-    </form>
+ -->    </form>
   </div>
 
   <script src="js/index.js"></script>
