--- a/fudo/views/register.hbs
+++ b/fudo/views/register.hbs
@@ -25,25 +25,23 @@
     <!-- fieldsets -->
     <fieldset>
       <h2 class="fs-title">Create your account</h2>
-      <h3 class="fs-subtitle"></h3>
-      <ul>
-      <li> <input type="text" name="name" placeholder="Name" required="required" /> </li>
-      <li> <input type="text" name="username" placeholder="Username" class="username" required="required" /> </li>
-      <li> <p class="username-output output"></p> </li>
-      <li> <input type="password" name="password" placeholder="Password" class="password" required="required" /> </li>
-      <li> <p class="password-output output"></p> </li>
-      <li> <input type="password" name="cpassword" placeholder="Confirm Password" class="cpassword" required="required" /> </li>
-      <li> <p class="cpassword-output output"></p> </li>
-      <li> <input type="text" name="email" placeholder="Email" /> </li>
-      <li> <input type="text" name="phone" placeholder="Phone Number" /> </li>
-      <li> <input type="button" name="next" class="next action-button" value="Next" /> </li>
-      </ul>
+      <!-- <h3 class="fs-subtitle">This is step 1</h3> -->
+      <input type="text" name="name" placeholder="Name" required="required" /> </li>
+      <input type="text" name="username" placeholder="Username" class="username" required="required" /> </li>
+      <p class="username-output output"></p> </li>
+      <input type="password" name="password" placeholder="Password" class="password" required="required" /> </li>
+      <p class="password-output output"></p> </li>
+      <input type="password" name="cpassword" placeholder="Confirm Password" class="cpassword" required="required" /> </li>
+      <p class="cpassword-output output"></p> </li>
+      <input type="button" name="next" class="next action-button" value="Next" /> </li>
     </fieldset>
     <fieldset>
       <h2 class="fs-title">Tell us a bit more about yourself!</h2>
       <h3 class="fs-subtitle">This is optional. You can always edit your description later.</h3>
-      <textarea name="about" cols="40" rows="5"></textarea>
-      <input type="button" name="previous" class="previous action-button" value="Previous" />
+      <input type="text" name="email" placeholder="Email" /> </li>
+      <input type="text" name="phone" placeholder="Phone Number" /> </li>
+      <textarea name="about" cols="40" rows="5" placeholder="About Me"></textarea>
+      <input type="button" name="previous" class="previous action-button" value="Previous"/>
       <button type="submit" class="submit action-button">Sign Up</button>
     </fieldset>
 <!--     <fieldset>
