--- a/fudo/views/register.hbs
+++ b/fudo/views/register.hbs
@@ -57,7 +57,7 @@
  -->    </form>
   </div>
 
-  <script src="js/index.js"></script>
+  <!-- <script src="js/index.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="../../js/ajax.js"></script>
